@@ -46,6 +46,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2883633 [export] Export of InnoDB table is incomplete 
 + rfe #2862575 [status] Order query statistics by % desc, skip rows with 0 
 + rfe #2823686 [interface] Increase default height of query window 
++ rfe #2129902 [structure] Don't hide indexes 
 
 3.2.4.0 (not yet released)
 - bug [engines] Innodb_buffer_pool_pages_latched no longer returned in status
